      (Suggested by Marc Dequèn)
    * Accepted DN as ActiveLdap::Base.new(XXX).
      (Reported by Jeremy Pruitt)
    * Treated empty password for smiple bind as anonymous bind.
      (Suggested by Bodaniel Jeans)
    * Ensured adding "objectClass" for find's :attribute value. [#16946]
      (Suggested by Nobody)
    * Fixed a GeneralizedTime type casting bug.
      (Reported by Bodaniel Jeanes)

0.9.0:
  * Improved DN handling.
  * Supported attribute value validation by LDAP schema.
  * Changed RubyGems name: ruby-activeldap -> activeldap.
  * Removed Log4r dependency.
  * Supported lazy connection establishing.
    * [API CHANGE]: establish_connection doesn't connect LDAP server.
  * [API CHANGE]: Removed ActiveLdap::Base#establish_connection.
  * Added ActiveLdap::Base#bind. (use this instead of #establish_connection)
  * Supported implicit acts_as_tree.
  * [API CHANGE]: Supported type casting.
  * Supported :uri option in configuration.
  * Improved Rails integration:
    * Followed Rails 2.0 changes.
    * AL-Admin:
      * Supported lang parameter in URL.
      * Improved design a bit. (Please someone help us!)
      * Supported schema inspection.
      * Supported objectClass modifiation.
    * Rails plugin:
      * Added ActiveLdap::VERSION check.
      * Added model_active_ldap generator.
      * Renamed scaffold_al generator to scaffold_active_ldap.

0.8.3:
  * Added AL-Admin Sample Rails app
  * Added Ruby-GetText-Package support
  * Added a Rails plugin
  * Improved schema handling
  * Improved performance
  * Many bug fixes

0.8.2:
  * Added Net::LDAP support!
    * supported SASL Digest-MD5 authentication with Net::LDAP.
  * improved LDAP server support:
    * improved Sun DS support.
    * improved ActiveDirectory support. Thanks to Ernie Miller!
    * improved Fedora-DS support. Thanks to Daniel Pfile!
  * improved existing functions:
    * improved DN handling. Thanks to James Hughes!
    * improved SASL bind.
    * improved old API check.